Add image asset and update titlebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
   <mat-toolbar color="primary">
-    <span><mat-icon>mood</mat-icon></span>
+    <span><img class="img-responsive" src="assets/images/stache_transparent.png"></span>
 
-    <span>Yay, Material in Angular 2!</span>
+    <span>The Movember Challenge</span>
 
     <button mat-icon-button [mat-menu-trigger-for]="menu">
       <mat-icon>more_vert</mat-icon>
