--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,10 +14,11 @@
   </mat-menu>
 
   <mat-card>
-    <button mat-button>All</button>
+    <!-- <button mat-button>All</button>
     <button mat-raised-button>Of</button>
     <button mat-raised-button color="primary">The</button>
-    <button mat-raised-button color="accent">Buttons</button>
+    <button mat-raised-button color="accent">Buttons</button> -->
+    <app-challenge></app-challenge>
   </mat-card>
 
   <span class="done">
