Add router, refactor components, add auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
   <mat-toolbar color="primary">
-    <span><img class="img-responsive" src="assets/images/stache_transparent.png"></span>
+    <span>
+      <img class="img-responsive" src="assets/images/stache_transparent.png">
+    </span>
 
     <span>The Movember Challenge</span>
 
@@ -18,7 +20,8 @@
     <button mat-raised-button>Of</button>
     <button mat-raised-button color="primary">The</button>
     <button mat-raised-button color="accent">Buttons</button> -->
-    <app-challenge></app-challenge>
+    <!-- <app-challenge></app-challenge> -->
+    <router-outlet></router-outlet>
   </mat-card>
 
   <span class="done">
