--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,29 +6,25 @@
 
     <span>The Movember Challenge</span>
 
-    <button mat-icon-button [mat-menu-trigger-for]="menu">
-      <mat-icon>more_vert</mat-icon>
-    </button>
-
     <button mat-raised-button color="accent" id="loginBtn" class="auth-button" *ngIf="!auth.isAuthenticated()" (click)="auth.login()">
       Log In
     </button>
+    <div *ngIf="auth.isAuthenticated()" class="auth-button">
+      <button mat-icon-button [mat-menu-trigger-for]="menu">
+        <mat-icon class="material-icons md-48">face</mat-icon>
+      </button>
 
-    <button mat-raised-button color="accent" id="logoutBtn" class="auth-button" *ngIf="auth.isAuthenticated()" (click)="auth.logout()">
-      Log Out
-    </button>
+      <button mat-icon-button [mat-menu-trigger-for]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+    </div>
   </mat-toolbar>
   <mat-menu x-position="before" #menu="matMenu">
-    <button mat-menu-item>Option 1</button>
-    <button mat-menu-item>Option 2</button>
+    <button mat-menu-item (click)="auth.logout()">Log Out</button>
+    <button mat-menu-item>Settings</button>
   </mat-menu>
 
   <mat-card>
-    <!-- <button mat-button>All</button>
-    <button mat-raised-button>Of</button>
-    <button mat-raised-button color="primary">The</button>
-    <button mat-raised-button color="accent">Buttons</button> -->
-    <!-- <app-challenge></app-challenge> -->
     <router-outlet></router-outlet>
   </mat-card>
 
