--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,6 +3,11 @@
     right: 20px;
 }
 
+.profile-picture-button {
+    width: 48px;
+    height: 48px;
+}
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
