Add home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<div>
+<!-- <div>
   <app-header></app-header>
-  <mat-card>
+  <mat-card> -->
     <router-outlet></router-outlet>
-  </mat-card>
+  <!-- </mat-card>
 
   <span class="done">
     <button mat-fab>
       <mat-icon>check circle</mat-icon>
     </button>
   </span>
-</div>
+</div> -->
